frontend/style.css
@import url('reset.css');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');

* {
padding: 0px;
margin: 0px;

}

.chart-header {
position: absolute;
top: 10px;
display: flex;
left: 50%;
width: 100%;
transform: translate(-28%,0);
}

#modules {
	position: relative;
	display:inline-flex;
	background-color: rgba(255, 255, 255, 0.15);
	border-radius: 20px;
	width: 330px;
	padding: 5px;
	z-index: 999;
	overflow-x: scroll;
	justify-content: center;
}
.modules::-webkit-scrollbar {
	display: none;
	-ms-overflow-style: none;  /* IE and Edge */
	scrollbar-width: none; 
	width: 0 !important;
  }


.modules {
	-ms-overflow-style: none;  /* IE and Edge */
	scrollbar-width: none;  /* Firefox */
  }

#modules:hover {
	background-color: rgba(255, 255, 255, 0.5);

}

#modules .rectangle{
    width:20px;
    height:20px;
	border-radius: 20px;
}

.cf:before, .cf:after {
	content: "";
	display: table;
}

.cf:after {
	clear: both;
}

.cf {
	zoom: 1;
}

html,body{
	width: 100%;
	height: 100%;
	background-color: #000;
}

#pgdb-app {
	font-family: 'Roboto Mono', monospace;
	display: flex;
	overflow: hidden;
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	font-size: 12px;
	line-height:1.25em;
}

#pgdb-app2 {
	font-family: 'Roboto Mono', monospace;
	display: flex;
	min-height: 100vh;
	align-items: center;
	justify-content: center;
}

.input-card {
	width: 450px;
	background: rgba(255, 255, 255, 0.5);
	padding: 4rem;
	border-radius: 10px;
	position: relative;
	z-index: 1;

}

.input-card::before {
	content: '';
	position: absolute;
	background: rgba(255, 255, 255, 0.15);
	inset: 0;
	border-radius: 10px;
	transform: rotate(-3deg);
	z-index: -1;
}

.input-card-logo {
	margin-bottom: 2rem;
}

.input-card-logo img{
	width: 60px;
}

.input-card-logo,
.input-data,
.input-card-navigation,
.input-card-footer,
.input-card-header {
	text-align: center;

}

.input-card-header{
	margin-bottom: 2rem;
}

.input-form-data{

	color: rgba(0, 0, 0, 0.75);
}

.input-form-data{
	display: flex;
	flex-direction:column;
	gap: 1rem;
}

.input-card-header h2 {
	font-family: 'Roboto Mono', monospace;
	font-weight: bold;
	color: black;
	font-size: 22px;
  }

.input-form-data button{
	background-color: #000;
	margin-top: 2rem;
	color: white;
	padding: 1rem;
	border-radius: 100px;
	text-transform: uppercase;
	letter-spacing: 1px;
	transition: .5s;
}

.input-form-data button:hover {
	background-color: rgba(0, 0, 0, 0.85);
	cursor: pointer;
	color:white;
}
.input-form-data #submit-btn.loading {
	pointer-events: none;
  }

.input-form-data #submit-btn.loading .button__text {
	visibility: hidden;
	opacity: 0;
  }

.input-form-data #submit-btn.loading::after {
	content: "";
	position: absolute;
	width: 16px;
	height: 16px;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	margin: auto;
	border: 4px solid transparent;
	border-top-color: #ffffff;
	border-radius: 50%;
	animation: button-loading-spinner 1s ease infinite;
  }

  @keyframes button-loading-spinner {
	from {
	  transform: rotate(0turn);
	}
  
	to {
	  transform: rotate(1turn);
	}
  }

.input-form-data textarea {
	font-family: 'Roboto Mono', monospace;
	border-radius: 20px;
	font-size: 14px;
	color: black;
	background-color: rgba(255,255,255,0.7);
	text-align: center;
	resize: none;
	border: none;
	outline: none;
	padding: 1rem;
	width: 100%;
	height: 100px;
	transition: 0.5s;

}

.input-form-data textarea:focus {
	background-color: white;
}

.input-form-data textarea::-webkit-scrollbar{
	display: none;
}

.vs__dropdown-toggle{
	background-color: rgba(255, 255, 255, 0.7);
	border: none ;
	border-radius: 20px ;
	font-family: 'Roboto Mono', monospace ;
}

.vs__dropdown-menu {
	background-color: rgba(0, 0, 0, 0.85);
	color: #ffffff;
	text-align: center;
	font-size: 14px;
	border: none ;
	border-radius: 20px ;
	margin-top: 10px;
	font-family: 'Roboto Mono', monospace ;
}

.vs__dropdown-menu::-webkit-scrollbar {
	display: none;
	-ms-overflow-style: none;  /* IE and Edge */
	scrollbar-width: none; 
	width: 0 !important;
  }


.vs--open .vs__dropdown-toggle {
    border-bottom-color: transparent;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.vs__actions button {
	background-color: rgba(0, 0, 0, 0.2);
	margin-top: 0;
	color: white;
	padding: 0.2rem;
	border-radius: 100px;
	text-transform: uppercase;
	letter-spacing: 1px;
	transition: .5s;
}

.vs__selected-options button{
	background-color: rgba(0, 0, 0, 0.2);
	margin-top: 0;
	color: white;
	padding: 0.2rem;
	border-radius: 100px;
	text-transform: uppercase;
	letter-spacing: 1px;
	transition: .5s;
}

.vs__selected-options {
	font-size: 14px;
} 

#vsel{
	margin-left: 5px;
}

#vsel .vs__selected-options {

	font-size: 14px;
	display: contents;
}

#vsel .vs__dropdown-toggle {
	background-color: rgba(255, 255, 255, 0.15);
	border: none;
	border-radius: 20px;
	font-family: 'Roboto Mono', monospace;
	width: 100px;
	height: 25px;
	display: -webkit-flex;
	align-content: center;
}

#vsel .vs__dropdown-menu{
	background-color: rgba(0, 0, 0, 0.95);
	color: #ffffff;
	text-align: center;
	font-size: 12px;
	border: outset ;
	border-color: #fff;
	border-radius: 20px ;
	border-width: 1px;
	margin-top: 10px;
	font-family: 'Roboto Mono', monospace ;
	min-width: 0;
	max-height: 150px;
}

#vsel .vs__selected,
#clust_vsel .vs__selected{
	font-size: 12px;
	color: white;
	width: 55px;
	position: absolute;
	overflow-x: hidden;
	}

#vsel .vs__open-indicator,
#clust_vsel .vs__open-indicator,
#select_d .vs__open-indicator{
	fill: rgba(255, 255, 255, 0.7);
}
#vsel .vs__clear,
#clust_vsel .vs__clear{
	fill: rgba(255, 255, 255, 0.7);
	margin-right: 4px;
}
#vsel .vs__actions{
	margin-top: 2px;
}

#clust_vsel .vs__actions{
	margin-top: -2px;
}

#vsel .vs__actions button,
#clust_vsel .vs__actions button{
	background: none;
	padding: 2px;
}

#vsel .vs__search{
	font-size: 12px;
	font-family: 'Roboto Mono', monospace ;
	text-transform: uppercase;
}
/* ... */

